src/components/todo/todo.module.css
.task_container {
  height: 46px;
  background-color: #fff;
  border-radius: 9999px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
}
.input_text {
  width: 100%;
  height: 46px;
  border-radius: 9999px;
  border: none;
  outline: none;
  padding-inline: 1.5rem;
}
.save_btn {
  cursor: pointer;
  position: absolute;
  z-index: 10;
  right: 5px;
  top: 5px;
  width: 64px;
  height: 36px;
  background-color: #585292;
  border: none;
  border-radius: 999px;
  color: white;
}
.save_btn:hover {
  opacity: 0.9;
}
.save_btn:active {
  transform: scale(0.99);
}
.task_name {
  display: inline-block;
  padding-left: 0.5rem;
}
.dots_container {
  position: relative;
}
.dots {
  cursor: pointer;
}

.dots_popup {
  z-index: 100;
  position: absolute;
  right: 0;
  background-color: #fff;

  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  width: 111px;
}
.dots_popup p:not(:last-child) {
  padding-bottom: 0;
}
.dots_popup p {
  cursor: pointer;
  padding: 1rem 1.5rem;
}
.dots_popup p:hover {
  color: #e07c7c;
  transition: all 0.2s;
}
input[type="checkbox"] {
  cursor: pointer;
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  /* Width and height of the checkbox */
  width: 17px;
  height: 17px;
  /* Background color when unchecked */
  background-color: #fff;
  /* Border */
  border: 2px solid #585292;
  border-radius: 4px;
  /* Add some padding to visually separate the checkbox from its label */
  margin-right: 5px;
}

input[type="checkbox"]:checked {
  background-color: #585292;
  /* border-color: #585292; */
}

input[type="checkbox"]::before {
  content: "";
  display: inline-block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  position: relative;
  top: -2px;
  left: 2px;
  /* Checkmark color */
  /* background-color: #fff; Change to desired color */
}

/* Style the checkmark when checkbox is checked */
input[type="checkbox"]:checked::before {
  content: "\2713"; /* Unicode character for checkmark */
  font-size: 10px; /* Adjust size of checkmark */
  /* color: #fff; Change to desired color */
  color: #fff;
}

